# libahp-gt

./: 99-libahp-gt.rules.cmake  CITATION.cff  CMakeLists.txt  Doxyfile.cmake  FindAHPGT.cmake  LICENSE  ahp_gt.1.5.9.c  ahp_gt.c  ahp_gt.h  ahp_gt.h.cmake  brew.sh.cmake  files.libahp-gt-dev.cmake  files.libahp-gt.cmake  rs232.c  rs232.h  serial.h
debian/: changelog  control  control.libahp-gt  control.libahp-gt-dev  files  libahp_gt.install
debian/.debhelper/libahp-gt/: dbgsym-build-ids
debian/.debhelper/libahp-gt/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/libahp-gt/dbgsym-root/usr/share/doc/: libahp-gt-dbgsym
debian/libahp-gt/DEBIAN/: control  md5sums  shlibs
debian/libahp-gt/usr/include/ahp/: ahp_gt.h
debian/libahp-gt/usr/share/doc/libahp-gt/: copyright
docs/: ahp__gt_8h_source.html  annotated.html  classes.html  functions.html  functions_vars.html  group___adr.html  group___astronomy.html  group___axs.html  group___cfg.html  group___conn.html  group___debug.html  group___defines.html  group___defs.html  group___g_t___a_p_i.html  group___move.html  group___s_g.html  group___types.html  group___x_c___a_p_i.html  index.html  modules.html  struct_skywatcher_axis_status-members.html  struct_skywatcher_axis_status.html  structgt__deviator-members.html  structgt__deviator.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  pages_0.js  searchdata.js  variables_0.js  (+7 more)
libserialport/: serialport.c
obj-x86_64-linux-gnu/: 99-libahp-gt.rules  CMakeCache.txt  Doxyfile  ahp_gt.h  cmake_install.cmake  install_manifest.txt
obj-x86_64-linux-gnu/docs/: ahp__gt_8h_source.html  annotated.html  classes.html  functions.html  functions_vars.html  group___adr.html  group___astronomy.html  group___cfg.html  group___conn.html  group___debug.html  group___defines.html  group___g_t___a_p_i.html  group___move.html  group___s_g.html  group___types.html  index.html  modules.html  struct_skywatcher_axis_status-members.html  struct_skywatcher_axis_status.html  structgt__deviator-members.html  structgt__deviator.html
obj-x86_64-linux-gnu/docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  pages_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+2 more)
